tests/negative/resource_decl_missing_semicolon.ora
resource TokenUnit = u256

contract MissingSemicolon {}
